<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        tools:context=".DetailMovieActivity">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_poster" />

        <TextView
            android:id="@+id/originalTitle_label"
            style="@style/DetailLabel"
            android:layout_width="0dp"
            android:text="@string/original_title_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_rating_label"
            style="@style/DetailLabel"
            android:layout_width="0dp"
            android:text="@string/user_rating_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <TextView
            android:id="@+id/release_date_label"
            style="@style/DetailLabel"
            android:layout_width="0dp"
            android:text="@string/release_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/user_rating_tv" />

        <TextView
            android:id="@+id/overview_label"
            style="@style/DetailLabel"
            android:text="@string/synopsis_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster" />

        <TextView
            android:id="@+id/trailers_label"
            style="@style/DetailLabel"
            android:text="@string/trailers_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_tv" />

        <TextView
            android:id="@+id/reviews_label"
            style="@style/DetailLabel"
            android:text="@string/reviews_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameVideos" />


        <TextView
            android:id="@+id/title_tv"
            style="@style/Detailtv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/originalTitle_label"
            tools:text="Advengers" />

        <TextView
            android:id="@+id/user_rating_tv"
            style="@style/Detailtv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/user_rating_label"
            tools:text="8.4" />

        <TextView
            android:id="@+id/release_date_tv"
            style="@style/Detailtv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/release_date_label"
            tools:text="24/03/18" />

        <TextView
            android:id="@+id/synopsis_tv"
            style="@style/Detailtv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview_label"
            tools:text="muy bueno" />

        <FrameLayout
            android:id="@+id/frameVideos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailers_label">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerviewVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/item_video_movie" />

            <TextView
                android:id="@+id/data_vidio_tv"
                style="@style/Detailtv"
                android:layout_width="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/data_no_available"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="No data avalible" />

            <ProgressBar
                android:id="@+id/pb_loading_indicator_video"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews_label">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerviewReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/item_video_movie" />

            <TextView
                android:id="@+id/data_review_tv"
                style="@style/Detailtv"
                android:layout_width="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/data_no_available"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="No data avalible" />

            <ProgressBar
                android:id="@+id/pb_loading_indicator_review"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>

        <TextView
            android:id="@+id/favorite_tv"
            style="@style/DetailLabelFavorite"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:drawableBottom="@drawable/ic_favorite_border_24dp"
            android:text="@string/make_it_your_favorite"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/release_date_tv" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>